--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.60.0",
+    "sass": "^1.79.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +42,12 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "postcss@<8.4.31": ">=8.4.31",
+      "nth-check@<2.0.1": ">=2.0.1",
+      "rollup@<3.29.5": ">=3.29.5"
+    }
   }
 }
